// Copyright (C) 2021-2024 Lightbend Inc. <https://www.lightbend.com>

// These are the messages that get persisted - the events, plus the current
// state (CartState) for snapshots.

syntax = "proto3";

package shoppingcart;
option java_package = "kalix.javasdk.shoppingcart";

option java_outer_classname = "ShoppingCart";

message LineItem {
  string productId = 1;
  string name = 2;
  int32 quantity = 3;
}

// The item added event.
message ItemAdded {
  LineItem item = 1;
}

// The item removed event.
message ItemRemoved {
  string productId = 1;
  int32 quantity = 2;
}

message CheckedOut {
  int64 checked_out_timestamp = 1;
}

// The shopping cart state.
message CartState {
  repeated LineItem items = 1;
  int64 checked_out_timestamp = 2;
}
